Bug 609821 - Don't attempt to update the position of caret when we may have pending reflow operations; r=roc a=bsmedberg